@@ -1,0 +1,1 @@
+declare main as function (int, argv as pointer to pointer to constant char) returning int
