@@ -1,0 +1,1 @@
+declare main as function (void) returning int
