@@ -1,0 +1,1 @@
+cdecl @ /dev/null @ @ explain int main( void ) @ 0
